--- a/_site.yml
+++ b/_site.yml
@@ -2,6 +2,9 @@ name: "Yay internet!"
 output_dir: "."
 navbar:
   title: "Home"
+  left: 
+    - text: "Experience"
+      href: experience.html
   right:
     - text: "About"
       href: about.html
