--- a/_site.yml
+++ b/_site.yml
@@ -8,6 +8,8 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Dashboard"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<lg3239@cumc.columbia.edu>
     - icon: fa-github fa-lg
